# numbers

./: .pre-commit-config.yaml  pyproject.toml  settings.json
src/numbers/: __init__.py  calculate.py
