[project]
name = "numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 88
target-version = "py311"  # Or your actual Python version

[tool.ruff.lint]
select = ["E", "F", "D"]  # Errors, Pyflakes, Docstring rules
ignore = ["D100", "D104"]  # Optional: ignore specific warnings

[tool.ruff.lint.pydocstyle]
convention = "google"  # Or "numpy", "pep257"

